--- a/package.JSON
+++ b/package.JSON
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/jcuetos97/Team-Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^9.1.0",
-    "jest": "^28.1.3"
+    "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
